Adjust index StayList responsiveness. Pending mobile gap fix

--- a/src/assets/styles/basics/layout.css
+++ b/src/assets/styles/basics/layout.css
@@ -2,6 +2,14 @@
     display: grid;
     /* grid-template-columns: minmax(1.8rem, 1fr) minmax(auto, 909px) minmax(1.8rem, 1fr); */
     min-height: 100vh;
+    /* Base layout for all screens */
+    grid-template-columns:
+        minmax(3rem, 1fr)
+        /* left margin */
+        minmax(auto, 100%)
+        /* main content */
+        minmax(3rem, 1fr);
+    /* right margin */
 
     >* {
         grid-column: 2;
