--- a/src/assets/styles/setup/MQ.css
+++ b/src/assets/styles/setup/MQ.css
@@ -15,39 +15,43 @@
         }
     }
 
+    .carousel {
+        margin-left: -10px;
+    }
+
     .carousel-list {
-        grid-auto-columns: calc((100% - (3 * .5rem)) / 4);
+        grid-auto-columns: min(384px, calc((97% - (1 * 0.75rem)) / 2));
+        gap: 0.75rem;
+        scroll-padding-left: 22px;
+        padding-inline: 1rem;
+    }
+
+    /* hide chevrons */
+    .carousel-controls {
+        display: none;
+    }
+
+    .stay-list-title {
+        padding-inline-start: 22px;
     }
 
 }
 
-
-@media (min-width: 744px) {
-
+@media (min-width: 744px) and (max-width: 949px) {
     .main-container {
-
-        display: grid;
-        grid-template-columns: minmax(1.8rem, 1fr) minmax(auto, 909px) minmax(1.8rem, 1fr);
-
-        >* {
-            grid-column: 2;
-
-            &.full {
-                grid-column: 1 / -1;
-            }
-        }
+        grid-template-columns:
+            minmax(2rem, 1fr) minmax(0, min(909px, 100% - 4rem)) minmax(2rem, 1fr);
     }
 
     .carousel-list {
-        grid-auto-columns: calc((100% - (3 * .5rem)) / 4);
+        grid-auto-columns: calc((100% - (3 * 0.5rem)) / 4);
     }
-
 }
 
-@media (min-width: 950px) {
+@media (min-width: 950px) and (max-width: 1244px) {
     .main-container {
-
-        grid-template-columns: minmax(2.3rem, 1fr) minmax(auto, 1084px) minmax(2.3rem, 1fr);
+        grid-template-columns:
+            minmax(2.3rem, 1fr) minmax(0, min(1084px, 100% - 4.6rem)) minmax(2.3rem, 1fr);
     }
 
     .carousel-list {
@@ -55,8 +59,7 @@
     }
 }
 
-
-@media (min-width: 1128px) {
+@media (min-width: 1245px) and (max-width: 1439px) {
     .main-container {
         grid-template-columns: minmax(2.5rem, 1fr) minmax(auto, 1352px) minmax(2.5rem, 1fr);
 
@@ -76,7 +79,7 @@
 
 @media (min-width: 1440px) {
     main.main-container {
-        grid-template-columns: minmax(3.4rem, 1fr) minmax(1352px, 1fr) minmax(3.4rem, 1fr);
+        grid-template-columns: 1fr minmax(auto, 1352px) 1fr;
     }
 
     .carousel-list {
@@ -84,41 +87,13 @@
     }
 }
 
+/* 
 @media (min-width: 1600px) {
     main .main-container {
-        grid-template-columns: minmax(auto, 3.4rem) minmax(1353px, 1fr) minmax(auto, 3.4rem);
+        grid-template-columns: 1fr minmax(auto, 1353px) 1fr;
     }
-}
 
-/* 1400–1599px -> still 7, smaller */
-/* @media (max-width: 1599px) and (min-width: 1400px) {
-            .carousel-list {
-                grid-auto-columns: calc((100% - (6 * 0.5rem)) / 7);
-            }
-        } */
-
-/* 1120–1399px -> 6 cards */
-/* @media (max-width: 1399px) and (min-width: 1120px) {
-            .carousel-list {
-                grid-auto-columns: calc((100% - (5 * 0.5rem)) / 6);
-            }
-
-            .stay-row {
-                padding-left: 32px;
-                padding-right: 32px;
-            }
-        } */
-
-/* 920–1119px -> 5 cards */
-/* @media (max-width: 1119px) and (min-width: 920px) {
-            .carousel-list {
-                grid-auto-columns: calc((100% - (4 * 0.5rem)) / 5);
-            }
-        } */
-
-/* ≤919px ->  4 cards */
-/* @media (max-width: 919px) {
-            .carousel-list {
-                grid-auto-columns: calc((100% - (3 * 0.5rem)) / 4);
-            }
-        } */
+    /* main .main-container {
+        grid-template-columns: minmax(auto, 3.4rem) minmax(1353px, 1fr) minmax(auto, 3.4rem);
+    } 
+} */
